Bug 228847 - REGRESSION: ASSERTION FAILED: !DeprecatedGlobalSettings::shouldManageAudioSessionCategory() || AudioSession::sharedSession().category() == AudioSession::CategoryType::PlayAndRecord
Summary: REGRESSION: ASSERTION FAILED: !DeprecatedGlobalSettings::shouldManageAudioSes...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Eric Carlson
URL:
Keywords: InRadar
: 228868 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-05 15:20 PDT by Ryan Haddad
Modified: 2021-08-06 11:58 PDT (History)
9 users (show)

See Also:


Attachments
crash log (86.67 KB, text/plain)
2021-08-05 15:27 PDT, Ryan Haddad
no flags Details
Patch (1.70 KB, patch)
2021-08-05 17:19 PDT, Eric Carlson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan Haddad 2021-08-05 15:20:30 PDT
The following assertion failure is seen with a few API tests and layout tests

        ASSERTION FAILED: !DeprecatedGlobalSettings::shouldManageAudioSessionCategory() || AudioSession::sharedSession().category() == AudioSession::CategoryType::PlayAndRecord
        ./platform/mediastream/mac/BaseAudioSharedUnit.cpp(106) : OSStatus WebCore::BaseAudioSharedUnit::startUnit()
        1   0x13dd1df59 WTFCrash
        2   0x122bc8f7b WTFCrashWithInfo(int, char const*, char const*, int)
        3   0x1273e18d5 WebCore::BaseAudioSharedUnit::startUnit()
        4   0x1273e1607 WebCore::BaseAudioSharedUnit::startProducingData()
        5   0x1274120fd WebCore::CoreAudioCaptureSource::startProducingData()
        6   0x127391ba9 WebCore::RealtimeMediaSource::start()
        7   0x112a875b4 WebKit::UserMediaCaptureManagerProxy::SourceProxy::start()
        8   0x112a87548 WebKit::UserMediaCaptureManagerProxy::startProducingData(WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType>)
        9   0x11329a1d8 void IPC::callMemberFunctionImpl<WebKit::UserMediaCaptureManagerProxy, void (WebKit::UserMediaCaptureManagerProxy::*)(WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType>), std::__1::tuple<WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType> >, 0ul>(WebKit::UserMediaCaptureManagerProxy*, void (WebKit::UserMediaCaptureManagerProxy::*)(WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType>), std::__1::tuple<WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType> >&&, std::__1::integer_sequence<unsigned long, 0ul>)
        10  0x11329a070 void IPC::callMemberFunction<WebKit::UserMediaCaptureManagerProxy, void (WebKit::UserMediaCaptureManagerProxy::*)(WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType>), std::__1::tuple<WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType> >, std::__1::integer_sequence<unsigned long, 0ul> >(std::__1::tuple<WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType> >&&, WebKit::UserMediaCaptureManagerProxy*, void (WebKit::UserMediaCaptureManagerProxy::*)(WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType>))
        11  0x113293268 void IPC::handleMessage<Messages::UserMediaCaptureManagerProxy::StartProducingData, WebKit::UserMediaCaptureManagerProxy, void (WebKit::UserMediaCaptureManagerProxy::*)(WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType>)>(IPC::Decoder&, WebKit::UserMediaCaptureManagerProxy*, void (WebKit::UserMediaCaptureManagerProxy::*)(WTF::ObjectIdentifier<WebCore::RealtimeMediaSourceIdentifierType>))
        12  0x113292d7b WebKit::UserMediaCaptureManagerProxy::didReceiveMessage(IPC::Connection&, IPC::Decoder&)
        13  0x111c79d45 WebKit::UserMediaCaptureManagerProxy::didReceiveMessageFromGPUProcess(IPC::Connection&, IPC::Decoder&)
        14  0x111c79859 WebKit::GPUConnectionToWebProcess::dispatchMessage(IPC::Connection&, IPC::Decoder&)
        15  0x111b5f430 WebKit::GPUConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&)
        16  0x11111c574 IPC::Connection::dispatchMessage(IPC::Decoder&)
        17  0x11111cd3f IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)
        18  0x11111d3a0 IPC::Connection::dispatchOneIncomingMessage()
        19  0x11113e6e8 IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_12::operator()()
        20  0x11113e5de WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_12, void>::call()
        21  0x13dd4bb82 WTF::Function<void ()>::operator()() const
        22  0x13ddd6870 WTF::RunLoop::performWork()
        23  0x13dddb2a1 WTF::RunLoop::performWork(void*)
        24  0x7fff205d497c __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__
        25  0x7fff205d48e4 __CFRunLoopDoSource0
        26  0x7fff205d4664 __CFRunLoopDoSources0
        27  0x7fff205d308c __CFRunLoopRun
        28  0x7fff205d264c CFRunLoopRunSpecific
        29  0x7fff21360647 -[NSRunLoop(NSRunLoop) runMode:beforeDate:]
        30  0x7fff213ee511 -[NSRunLoop(NSRunLoop) run]
        31  0x7fff2022a38d _xpc_objc_main

https://results.webkit.org/?suite=layout-tests&suite=api-tests&suite=api-tests&test=fast%2Fspeechrecognition%2Fstart-recognition-twice-exception.html&test=TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturing&test=TestWebKitAPI.WebKit2.CrashGPUProcessWhileCapturingAndCalling
Comment 1 Radar WebKit Bug Importer 2021-08-05 15:20:46 PDT
<rdar://problem/81587101>
Comment 2 Ryan Haddad 2021-08-05 15:26:36 PDT
Looks like this started with https://trac.webkit.org/changeset/280702/webkit
Comment 3 Ryan Haddad 2021-08-05 15:27:39 PDT
Created attachment 435030 [details]
crash log
Comment 4 Eric Carlson 2021-08-05 17:19:48 PDT
Created attachment 435041 [details]
Patch
Comment 5 EWS 2021-08-05 21:58:20 PDT
ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!.
Comment 6 EWS 2021-08-06 08:04:20 PDT
Committed r280722 (240313@main): <https://commits.webkit.org/240313@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 435041 [details].
Comment 7 Eric Carlson 2021-08-06 11:58:32 PDT
*** Bug 228868 has been marked as a duplicate of this bug. ***