Cherry-pick r280722. rdar://problem/81618758

REGRESSION: ASSERTION FAILED: !DeprecatedGlobalSettings::shouldManageAudioSessionCategory() || AudioSession::sharedSession().category() == AudioSession::CategoryType::PlayAndRecord
    https://bugs.webkit.org/show_bug.cgi?id=228847
    <rdar://problem/81587101>

    Reviewed by Jer Noble.

    No new tests, fixes a crashing test.

    * UIProcess/Cocoa/UserMediaCaptureManagerProxy.cpp:
    (WebKit::UserMediaCaptureManagerProxy::SourceProxy::audioUnitWillStart): Restore.

    Canonical link: https://commits.webkit.org/240313@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280722 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240203.19@safari-612.1.27.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.27.0-branch@280730 268f45cc-cd09-0410-ab3c-d52691b4dbfc